// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extensions > applies esbuild plugin to .js 1`] = `
"// __tests__/use-client/fixtures/esbuild/client.js
import { registerClientReference as $$registerClientReference$$ } from "pkg";
var $$Ref$$default = $$registerClientReference$$();
export {
  $$Ref$$default as default
};
"
`;

exports[`extensions > applies esbuild plugin to .jsx 1`] = `
"// __tests__/use-client/fixtures/esbuild/client.jsx
import { registerClientReference as $$registerClientReference$$ } from "pkg";
import { jsx } from "react/jsx-runtime";
var $$Ref$$default = $$registerClientReference$$();
export {
  $$Ref$$default as default
};
"
`;

exports[`extensions > applies esbuild plugin to .mjs 1`] = `
"// __tests__/use-client/fixtures/esbuild/client.mjs
import { registerClientReference as $$registerClientReference$$ } from "pkg";
var $$Ref$$default = $$registerClientReference$$();
export {
  $$Ref$$default as default
};
"
`;

exports[`extensions > applies esbuild plugin to .mts 1`] = `
"// __tests__/use-client/fixtures/esbuild/client.mts
import { registerClientReference as $$registerClientReference$$ } from "pkg";
var $$Ref$$default = $$registerClientReference$$();
export {
  $$Ref$$default as default
};
"
`;

exports[`extensions > applies esbuild plugin to .ts 1`] = `
"// __tests__/use-client/fixtures/esbuild/client.ts
import { registerClientReference as $$registerClientReference$$ } from "pkg";
var $$Ref$$default = $$registerClientReference$$();
export {
  $$Ref$$default as default
};
"
`;

exports[`extensions > applies esbuild plugin to .tsx 1`] = `
"// __tests__/use-client/fixtures/esbuild/client.tsx
import { registerClientReference as $$registerClientReference$$ } from "pkg";
import { jsxs } from "react/jsx-runtime";
var $$Ref$$default = $$registerClientReference$$();
export {
  $$Ref$$default as default
};
"
`;

exports[`extensions > doesn't apply esbuild plugin to .cjs 1`] = `
""use client";
var __getOwnPropNames = Object.getOwnPropertyNames;
var __commonJS = (cb, mod) => function __require() {
  return mod || (0, cb[__getOwnPropNames(cb)[0]])((mod = { exports: {} }).exports, mod), mod.exports;
};

// __tests__/use-client/fixtures/esbuild/not-valid.cjs
var require_not_valid = __commonJS({
  "__tests__/use-client/fixtures/esbuild/not-valid.cjs"(exports, module) {
    module.exports = 1;
  }
});
export default require_not_valid();
"
`;

exports[`extensions > doesn't apply esbuild plugin to .css 1`] = `
"/* __tests__/use-client/fixtures/esbuild/not-valid.css */
"
`;

exports[`extensions > doesn't apply esbuild plugin to .cts 1`] = `
""use client";
var __getOwnPropNames = Object.getOwnPropertyNames;
var __commonJS = (cb, mod) => function __require() {
  return mod || (0, cb[__getOwnPropNames(cb)[0]])((mod = { exports: {} }).exports, mod), mod.exports;
};

// __tests__/use-client/fixtures/esbuild/not-valid.cts
var require_not_valid = __commonJS({
  "__tests__/use-client/fixtures/esbuild/not-valid.cts"(exports, module) {
    module.exports = 1;
  }
});
export default require_not_valid();
"
`;
